src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TestInStyleTargetType.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <DockPanel.Resources>
        <Style>
            <Button>Hello world</Button>
        </Style>
    </DockPanel.Resources>
    <Button />
</DockPanel>
</Page>
